Add modification to the project

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale1.0">
+        <link rel="stylesheet" href="./style/style.css">
         <title>TULIOBAST's RECIPES</title> 
     </head>
 
     <body>
-        <h1>TULIO's RECIPES</h1>
-        <ul>
-            <li><a href="recipes/lasagna.html">LASAGNA</a></li>
+        <h1 class="title">TULIO's RECIPES</h1>
+        <ul class="list">
+            <li><a class="odd" href="recipes/lasagna.html">LASAGNA</a></li>
             <li><a href="recipes/mac&chesse.html">MACARONI AND CHEESE</a></li>
-            <li><a href="recipes/beef-stir-fry.html">BEEF STIR-FRY</a></li>
+            <li><a class="odd" href="recipes/beef-stir-fry.html">BEEF STIR-FRY</a></li>
             <li><a href="recipes/chocolate-cake.html">CHOCOLATE CAKE</a></li>
         </ul>
         
