--- a/recipes/beef-stir-fry.html
+++ b/recipes/beef-stir-fry.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style/style.css">
         <title>Quick Beef Stir-Fry</title>
     </head>
 
     <body>
-        <h1>Quick Beef Stir-Fry</h1>
+        <h1 class="title">Quick Beef Stir-Fry</h1>
         <img src="https://www.gourmet4life.com/image0428/80/8085ff1fc3189beac24b59352024c937.jpg" alt="beef stir-fry img">
         <h2>Description</h2>
         <p>Quick and easy beef stir-fry. I make this on my busiest weeknights.</p>
@@ -26,19 +27,19 @@
         <h3>Directions</h3>
         <ol>
             <li><strong>Step 1</strong><br>
-                <p>Gather all ingredients.</p>
+                <p class="directions">Gather all ingredients.</p>
             </li>
             <li><strong>Step 2</strong><br>
-                <p>Heat vegetable oil in a large wok or skillet over medium-high heat; cook and stir beef until browned, 3 to 4 minutes.</p>
+                <p class="directions">Heat vegetable oil in a large wok or skillet over medium-high heat; cook and stir beef until browned, 3 to 4 minutes.</p>
             </li>
             <li><strong>Step 3</strong><br>
-                <p>Move beef to the side of the wok and add broccoli, bell pepper, carrots, green onion, and garlic to the center of the wok. Cook and stir vegetables for 2 minutes.</p>
+                <p class="directions">Move beef to the side of the wok and add broccoli, bell pepper, carrots, green onion, and garlic to the center of the wok. Cook and stir vegetables for 2 minutes.</p>
             </li>
             <li><strong>Step 4</strong><br>
-                <p>Stir beef into vegetables and season with soy sauce and sesame seeds. Continue to cook and stir until vegetables are tender, about 2 more minutes.</p>
+                <p class="directions">Stir beef into vegetables and season with soy sauce and sesame seeds. Continue to cook and stir until vegetables are tender, about 2 more minutes.</p>
             </li>
             <li><strong>Step 5</strong><br>
-                <p>Serve hot and enjoy!</p>
+                <p class="directions">Serve hot and enjoy!</p>
             </li>
         </ol>
     </body>
