--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style/style.css">
         <title>Chocolate Stout Cake</title>
     </head>
 
     <body>
-        <h1>Chocolate Stout Cake</h1>
+        <h1 class="title">Chocolate Stout Cake</h1>
         <img src="https://www.allrecipes.com/thmb/pG3ArhZZLq5M4bDEEviXWugj0sc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8426369_Chocolate-Stout-Cake-with-Chocolate-Caramel-Frosting_Kim-Shupe_4x3-4087095180444d999df5e0de0730045d.jpg" alt="chocolate cake img">
         <h2>Description</h2>
         <p>This moist chocolate stout cake with chocolate caramel frosting gains intensity and flavor from stout beer. It pairs beautifully with the rich, luscious chocolate-caramel frosting. Give yourself plenty of time to make this cake—it requires several hours of cooling time.</p>
