--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style/style.css">
         <title>Lasagna</title>
     </head>
 
     <body>
-        <h1><strong>LASAGNA</strong></h1>
+        <h1 class="title"><strong>LASAGNA</strong></h1>
         <img src="https://www.allrecipes.com/thmb/-i-TFBVa94GOhUdFcOU2rKwlYrE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4x3-PASSANO_ALR0123_Makeovers_Lasagna_4622-886df2c62d95473aabf1e259e0469846.jpg" alt="img Lasagna">
         <h2>Description</h2>
         <p>A delicious version of lasagna for those of us who are health conscious</p>
