--- a/recipes/mac&chesse.html
+++ b/recipes/mac&chesse.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style/style.css">
         <title>Simple Macaroni and Cheese</title>
     </head>
 
     <body>
-        <h1>Simple Macaroni and Cheese</h1>
+        <h1 class="title">Simple Macaroni and Cheese</h1>
         <img src="https://cdn.eldestapeweb.com/eldestape/072023/1689344508165.webp?cw=770&ch=440&extw=jpg" alt="mac&chesse img">
         <h2>Description</h2>
         <p>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to prepare when you have so many expensive cheeses, but they aren't always the best tasting. This simple recipe is cheap and tasty.</p>
